--- a/public/index.html
+++ b/public/index.html
@@ -14,8 +14,8 @@
     <title>@moemarusan</title>
     <meta property="og:title" content="@moemarusan"" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="%PUBLIC_URL%" />
-    <meta property="og:image" content="%PUBLIC_URL%/logo.png" />
+    <meta property="og:url" content="https://moemarusan.com" />
+    <meta property="og:image" content="https://moemarusan.com/logo.png" />
     <meta property="og:site_name" content="@moemarusan" />
     <meta property="og:description" content="@moemarusan's portfolio" />
     <meta name="twitter:card" content="summary" />
