--- a/index.html
+++ b/index.html
@@ -1,37 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# article: http://ogp.me/ns/article#">
-    <meta charset="utf-8" />
-    <link rel="icon" href="./favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#e0245e" />
-    <meta
-      name="description"
-      content="@moemarusan's portfolio"
-    />
-    <link rel="apple-touch-icon" href="./logo192.png" />
-    <link rel="manifest" href="./manifest.json" />
-    <title>@moemarusan</title>
-    <meta property="og:title" content="@moemarusan" />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://moemarusan.com" />
-    <meta property="og:image" content="https://moemarusan.com/logo.png" />
-    <meta property="og:site_name" content="@moemarusan" />
-    <meta property="og:description" content="@moemarusan's portfolio" />
-    <meta name="twitter:card" content="summary" />
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div class="App">
-      <p class="style_l">Hello,</p>
-      <p class="style_l2">I'm Moena Saiki.</p>
-      <p class="style_s fs">a.k.a. moemaru. いつもねむい</p>
-      <nav class="social">
-        <a class="style_s2" href="https://twitter.com/moemarusan">Twitter</a><br/>
-        <a class="style_s2" href="https://facebook.com/moemarusan">Facebook</a><br/>
-        <a class="style_s2" href="https://kuromimi.moemarusan.com">Blog</a><br/>
-      </nav>
-    </div>
-  </body>
+
+<head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# article: http://ogp.me/ns/article#">
+  <meta charset="utf-8" />
+  <link rel="icon" href="./favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#ffffff" media="(prefers-color-scheme: light)" />
+  <meta name="theme-color" content="#0b1021" media="(prefers-color-scheme: dark)" />
+  <meta name="description" content="@moemarusan's portfolio" />
+  <link rel="apple-touch-icon" href="./logo192.png" />
+  <link rel="manifest" href="./manifest.json" />
+  <title>@moemarusan</title>
+  <meta property="og:title" content="@moemarusan" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://moemarusan.com" />
+  <meta property="og:image" content="https://moemarusan.com/logo.png" />
+  <meta property="og:site_name" content="@moemarusan" />
+  <meta property="og:description" content="@moemarusan's portfolio" />
+  <meta name="twitter:card" content="summary" />
+  <link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div class="App">
+    <p class="style_l">Hello,</p>
+    <p class="style_l2">I'm Moena Saiki.</p>
+    <p class="style_s fs">a.k.a. moemaru. いつもねむい</p>
+    <nav class="social">
+      <a class="style_s2" href="https://twitter.com/moemarusan">Twitter</a><br />
+      <a class="style_s2" href="https://facebook.com/moemarusan">Facebook</a><br />
+      <a class="style_s2" href="https://kuromimi.moemarusan.com">Blog</a><br />
+    </nav>
+  </div>
+</body>
+
 </html>
