feat: add animation

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 
 <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# article: http://ogp.me/ns/article#">
   <meta charset="utf-8" />
@@ -22,17 +22,18 @@
 </head>
 
 <body>
-  <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div class="App">
-    <p class="style_l">Hello,</p>
-    <p class="style_l2">I'm Moena Saiki.</p>
-    <p class="style_s fs">a.k.a. moemaru. いつもねむい</p>
-    <nav class="social">
-      <a class="style_s2" href="https://twitter.com/moemarusan">Twitter</a><br />
-      <a class="style_s2" href="https://facebook.com/moemarusan">Facebook</a><br />
-      <a class="style_s2" href="https://kuromimi.moemarusan.com">Blog</a><br />
+  <main class="container">
+    <h1 class="hero-title">
+      Hello,<br />
+      I'm Moena Saiki.
+    </h1>
+    <p class="hero-description">a.k.a. moemaru. いつもねむい</p>
+    <nav class="social-nav">
+      <a class="social-link" href="https://twitter.com/moemarusan">Twitter</a>
+      <a class="social-link" href="https://facebook.com/moemarusan">Facebook</a>
+      <a class="social-link" href="https://kuromimi.moemarusan.com">Blog</a>
     </nav>
-  </div>
+  </main>
 </body>
 
 </html>
